--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -8,7 +8,7 @@ on:
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
-  AKS_RG_NAME: 'bicepbuild'
+  AKS_RG_NAME: 'jgaobicepbuild0123'
 
 jobs:
   push-image:
